fixed issue for overlap icon

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -438,6 +438,12 @@
 	.graph_info_mobile {
 		display: block;
 	}
+	.impact_block_inner {
+		background: #fff;
+	}
+	.impact_main_info {
+		padding: 0;
+	}
 }
 @media (max-width:600px) {
 	html {
