--- a/css/style.less
+++ b/css/style.less
@@ -246,6 +246,13 @@ section {
 	padding: 0;
 	margin: 0;
 }
+.impact_main_info {
+	width: 100%;
+	float: left;
+	padding: 40px 0 0 0;
+	margin: 0;
+	background: #fff;
+}
 .impact_block {
 	width: 100%;
 	min-height: 420px;
@@ -505,6 +512,13 @@ section {
 			max-width: 250px;
 		}
 	}
+}
+.impact_block_inner {
+	width: 100%;
+	float: left;
+	padding: 0;
+	margin: 0;
+	background: #f3f3f3;
 }
 .read_more_2 {
 	width: 100%;
@@ -1196,4 +1210,3 @@ ul.social_info {
 	top: 0;
 	z-index: 8888;
 }
-
